other/b-d/disable-service-discovery/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disable-service-discovery
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disable-service-discovery.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - apply:
        file: podcontrollers.yaml
  - name: step-03
    try:
    - assert:
        file: pods-patched.yaml
    - assert:
        file: podcontrollers-patched.yaml
